# signal

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  signal.config.example.json  signal.worker.policy.example.json  signal_demo.db  signal_demo_8790.db  signal_vapid.json
crates/signal-cli/: Cargo.toml
crates/signal-cli/src/: main.rs
crates/signal-core/: Cargo.toml
crates/signal-core/src/: auth.rs  events.rs  lib.rs  models.rs  permissions.rs  storage.rs
crates/signal-daemon/: Cargo.toml
crates/signal-daemon/src/: api.rs  app.html  app_state.rs  html.rs  main.rs  manifest.webmanifest  push.rs  service-worker.js  vapid.rs  web_push_sender.rs
crates/signal-worker/: Cargo.toml
crates/signal-worker/src/: main.rs
desktop/: index.html  main.js  styles.css
docs/: ARCHITECTURE.md  ARCHITECTURE_FEATURES.md  DEMO.md  DESKTOP_TAURI.md  DOGFOOD.md  EXPERIMENTAL_ACTIONS.md  NOTIFICATION_SYSTEM_README.md  PHASE_B_MANUAL_TEST.md  PHASE_B_SWEEP.md  PHASE_C_RELEASE_CHECKLIST.md  PHASE_D_DOCTOR.md  PHASE_E_RELEASE_SMOKE.md  PHASE_F_BROWSER_CHECKLIST.md  PHASE_F_SMOKE.md  PWA_PUSH.md
docs/architecture-plan/: 01-core-architecture.md  02-implementation-roadmap.md  03-research-matrix.md  04-risk-register.md  README.md
scripts/: build_release.ps1  install_shortcut.ps1  package_release.ps1  prepare_tauri_sidecars.ps1  set_rust_remap.ps1  smoke_demo.ps1  smoke_release.ps1  start_release.ps1  start_signal.ps1  tauri_build.ps1  tauri_dev.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
