[package]
name = "signal-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = "2"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
base64-url = "2"

[dev-dependencies]
tempfile = "3"
